[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/UI/btn.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/gunplay rg.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/UI/btn2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Audio/LD41_Way_Out_Main_scene_-_Track_01_Merlin.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="Play" type="Container" parent="."]
margin_left = 311.0
margin_top = 263.0
margin_right = 612.0
margin_bottom = 329.0

[node name="btn" type="TouchScreenButton" parent="Play"]
visible = false
position = Vector2( 6.30396, 7.20612 )
scale = Vector2( 0.6127, 0.628355 )
normal = ExtResource( 3 )

[node name="PlayButton" type="Button" parent="Play"]
margin_left = 1.0
margin_top = -10.0
margin_right = 487.0
margin_bottom = 82.0
icon = ExtResource( 3 )
flat = true

[node name="Label" type="Label" parent="Play"]
margin_left = 28.0
margin_top = 10.0
margin_right = 128.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Play"

[node name="Controls" type="Container" parent="."]
margin_left = 314.0
margin_top = 406.0
margin_right = 615.0
margin_bottom = 472.0

[node name="btn" type="TouchScreenButton" parent="Controls"]
position = Vector2( 6.30396, 7.20612 )
scale = Vector2( 0.6127, 0.628355 )
normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Controls"]
margin_left = 28.0
margin_top = 10.0
margin_right = 185.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Help"

[node name="ControlsButton" type="Button" parent="Controls"]
margin_left = 1.0
margin_top = -10.0
margin_right = 308.0
margin_bottom = 82.0
flat = true

[node name="Exit" type="Container" parent="."]
margin_left = 306.0
margin_top = 855.0
margin_right = 607.0
margin_bottom = 921.0

[node name="btn" type="TouchScreenButton" parent="Exit"]
position = Vector2( 6.30396, 7.20612 )
scale = Vector2( 0.6127, 0.628355 )
normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Exit"]
margin_left = 28.0
margin_top = 10.0
margin_right = 185.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Exit"

[node name="ExitButton" type="Button" parent="Exit"]
margin_left = 1.0
margin_top = -10.0
margin_right = 308.0
margin_bottom = 82.0
flat = true

[node name="Credits" type="Container" parent="."]
margin_left = 1243.0
margin_top = 835.0
margin_right = 1544.0
margin_bottom = 901.0

[node name="btn" type="TouchScreenButton" parent="Credits"]
position = Vector2( 6.30396, 7.20612 )
scale = Vector2( 0.6127, 0.628355 )
normal = ExtResource( 5 )

[node name="Label" type="Label" parent="Credits"]
margin_left = 110.0
margin_top = 9.0
margin_right = 267.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Credits"

[node name="CreditsButton" type="Button" parent="Credits"]
margin_left = -2.0
margin_top = -10.0
margin_right = 305.0
margin_bottom = 82.0
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
[connection signal="pressed" from="Play/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Controls/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="Exit/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Credits/CreditsButton" to="." method="_on_CreditsButton_pressed"]
